Contact page ready

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,32 @@
 body {
   background-color: #26292e;
 }
+input,
+textarea {
+  background-color: #303338;
+  transition: background-color 0.75s ease;
+}
+input:focus,
+textarea:focus {
+  background-color: #404348;
+}
+.project-card {
+  overflow: hidden;
+}
+.project-card * {
+  z-index: 1;
+}
+.project-card::after {
+  content: "";
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-color: #2f80ed;
+  height: 100%;
+  width: 100%;
+  transform: translateY(110%);
+  transition: transform 0.45s ease;
+}
+.project-card:hover::after {
+  transform: translateY(0%);
+}
